Updated Bot